[gd_scene load_steps=9 format=3 uid="uid://dgvrpkj008u4t"]

[ext_resource type="Script" path="res://game/scripts/menus/CreditsMenu.gd" id="1_gsiom"]
[ext_resource type="Texture2D" uid="uid://mfo5xdgme5ob" path="res://assets/images/menus/menuDesat.png" id="1_kb3l6"]
[ext_resource type="Script" path="res://game/scripts/menus/data/CreditsData.gd" id="2_g18y3"]
[ext_resource type="Script" path="res://game/scripts/menus/data/Alphabet.gd" id="3_fwfog"]

[sub_resource type="Resource" id="Resource_jf7ii"]
script = ExtResource("2_g18y3")
user = "BeastlyGabi"
icon = "gabi"
descrption = "Programmer of Funkin' Feather."
icon_offset = Vector2(75, -25)
color = Color(0, 0.658824, 0.658824, 1)
url = "https://twitter.com/BeastlyGabi"

[sub_resource type="Resource" id="Resource_smr2r"]
script = ExtResource("2_g18y3")
user = "Satorukaji"
icon = "satorukaji"
descrption = "Artist of Funkin' Feather."
icon_offset = Vector2(80, -20)
color = Color(1, 0.364706, 0.352941, 1)
url = ""

[sub_resource type="Resource" id="Resource_qmtjw"]
script = ExtResource("2_g18y3")
user = "AllyTS"
icon = "allyts"
descrption = ""
icon_offset = Vector2(75, -15)
color = Color(0.764706, 0.152941, 0.309804, 1)
url = "https://twitter.com/NewTioSans"

[sub_resource type="Resource" id="Resource_gc0kt"]
script = ExtResource("2_g18y3")
user = "SrtHero278"
icon = "srt"
descrption = "Programming Help and various fixes."
icon_offset = Vector2(100, 25)
color = Color(0.207843, 0.882353, 1, 1)
url = ""

[node name="CreditsMenu" type="Node2D"]
script = ExtResource("1_gsiom")
credits_list = Array[ExtResource("2_g18y3")]([SubResource("Resource_jf7ii"), SubResource("Resource_smr2r"), SubResource("Resource_qmtjw"), SubResource("Resource_gc0kt")])

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(637.715, 362)
scale = Vector2(0.991781, 0.991781)
texture = ExtResource("1_kb3l6")

[node name="Alphabet_Template" type="ReferenceRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_fwfog")
bold = true

[node name="Credits_Node" type="Node" parent="."]

[node name="Icons_Node" type="Node" parent="."]
